--- a/backend/src/main/resources/messages/messages_en_US.properties
+++ b/backend/src/main/resources/messages/messages_en_US.properties
@@ -137,6 +137,38 @@ lot.products.activated=Lot products activated successfully
 lot.products.required=Lot must have at least one product to be activated
 
 # ========================================
+# STATISTICS AND REPORTS
+# Story 1: Contract Statistics Endpoints - Sprint S2.2
+# ========================================
+
+# General Statistics
+statistics.success=Statistics obtained successfully
+statistics.calculation.error=Error calculating contract statistics
+statistics.status.invalid=Invalid status provided: {0}. Ignoring status filter
+statistics.seller.default=Seller {0}
+statistics.seller.error=Error fetching seller data {0}: {1}
+
+# Commission Reports
+commission.report.success=Commission report generated successfully
+commission.calculation.error=Error calculating commission report
+commission.no.data=No data found for the specified period
+
+# Revenue Projections
+revenue.projections.success=Revenue projections obtained successfully
+revenue.calculation.error=Error calculating revenue projections
+
+# Period Validations
+validation.date.start.before.end=Start date must be before end date
+validation.period.max.one.year=Maximum allowed period is 1 year
+validation.period.invalid=Invalid period specified
+
+# Date Formatting
+date.range.separator= to 
+date.format.day=MM/dd/yyyy
+date.format.month=MMMM yyyy
+date.format.year=yyyy
+
+# ========================================
 # VALIDATIONS
 # ========================================
 validation.required=Required field
