--- a/backend/src/main/resources/messages/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages/messages_pt_BR.properties
@@ -137,6 +137,38 @@ lot.products.activated=Produtos do lote ativados com sucesso
 lot.products.required=Lote deve ter pelo menos um produto para ser ativado
 
 # ========================================
+# ESTATÍSTICAS E RELATÓRIOS
+# História 1: Endpoints de Estatísticas de Contratos - Sprint S2.2
+# ========================================
+
+# Estatísticas Gerais
+statistics.success=Estatísticas obtidas com sucesso
+statistics.calculation.error=Erro ao calcular estatísticas de contratos
+statistics.status.invalid=Status inválido fornecido: {0}. Ignorando filtro de status
+statistics.seller.default=Vendedor {0}
+statistics.seller.error=Erro ao buscar dados do vendedor {0}: {1}
+
+# Relatórios de Comissões
+commission.report.success=Relatório de comissões gerado com sucesso
+commission.calculation.error=Erro ao calcular relatório de comissões
+commission.no.data=Nenhum dado encontrado para o período especificado
+
+# Projeções de Receita
+revenue.projections.success=Projeções de receita obtidas com sucesso
+revenue.calculation.error=Erro ao calcular projeções de receita
+
+# Validações de Período
+validation.date.start.before.end=Data de início deve ser anterior à data de fim
+validation.period.max.one.year=Período máximo permitido é de 1 ano
+validation.period.invalid=Período inválido especificado
+
+# Formatação de Datas
+date.range.separator= a 
+date.format.day=dd/MM/yyyy
+date.format.month=MMMM yyyy
+date.format.year=yyyy
+
+# ========================================
 # VALIDAÇÕES
 # ========================================
 validation.required=Campo obrigatório
