--- a/backend/src/main/resources/messages/messages_en_US.properties
+++ b/backend/src/main/resources/messages/messages_en_US.properties
@@ -250,3 +250,77 @@ business.invalid.state=Invalid state for operation
 business.constraint.violation=Business rule violation
 business.resource.conflict=Resource conflict
 business.operation.not.allowed=Operation not allowed
+
+# ========================================
+# ADVANCED COMMISSION CALCULATIONS - Sprint S2.2
+# ========================================
+
+# Advanced Commission Calculations
+commission.detailed.success=Detailed commission report generated successfully - {0} contracts processed
+commission.by.seller.success=Commission by seller calculated successfully - {0} sellers processed
+commission.breakdown.success=Detailed breakdown generated successfully - {0} contracts found for seller {1}
+commission.comparison.success=Period comparison completed successfully
+
+# Advanced Revenue Projections
+revenue.projection.success=Revenue projection calculated successfully for {0} months: ${1}
+revenue.projection.error=Error calculating revenue projection
+
+# Expiring Contracts - Story 3
+expiring.contracts.success=Expiring contracts report generated successfully - {0} contracts found
+notifications.sent.success=Expiring contract notifications sent successfully
+notifications.sent.error=Error sending expiring contract notifications
+
+# Specific Validations for Story 2
+validation.days.range=Number of days must be between 1 and 365
+validation.months.range=Number of months must be between 1 and 24
+validation.urgency.invalid=Invalid urgency level: {0}. Valid values: HIGH, MEDIUM, LOW
+validation.seller.required=Seller ID is required
+
+# Expiring Contract Messages
+contract.expiring.subject=Contract expiring in {0} days
+contract.expiring.body=Hello {0},\n\nYour contract in category ''{1}'' expires in {2} days.\n\nPlease contact us for renewal.\n\nBest regards,\nElectronic Auction Team
+
+# Formatting and Display
+commission.period.daily=Daily
+commission.period.weekly=Weekly
+commission.period.monthly=Monthly
+commission.period.quarterly=Quarterly
+commission.period.yearly=Yearly
+
+commission.status.realized=Realized
+commission.status.projected=Projected
+commission.status.pending=Pending
+
+urgency.high=High
+urgency.medium=Medium
+urgency.low=Low
+
+# Metrics and KPIs
+metrics.total.contracts=Total Contracts
+metrics.active.sellers=Active Sellers
+metrics.projected.revenue=Projected Revenue
+metrics.realized.revenue=Realized Revenue
+metrics.average.commission=Average Commission Rate
+metrics.contracts.expiring=Expiring Contracts
+metrics.contracts.created=Created Contracts
+metrics.contracts.expired=Expired Contracts
+metrics.active.categories=Active Categories
+
+# Reports
+report.commission.title=Commission Report
+report.commission.subtitle=Detailed commission analysis by period
+report.expiring.title=Expiring Contracts Report
+report.expiring.subtitle=Contracts nearing expiration
+report.projection.title=Revenue Projection
+report.projection.subtitle=Estimates based on active contracts
+
+# Export
+export.csv.success=Report exported to CSV successfully
+export.pdf.success=Report exported to PDF successfully
+export.error=Error exporting report: {0}
+
+# Cache and Performance
+cache.statistics.hit=Statistics obtained from cache
+cache.statistics.miss=Statistics calculated and stored in cache
+performance.warning=Performance degraded: operation took {0}ms (limit: {1}ms)
+performance.optimal=Operation completed in {0}ms - optimal performance
