--- a/backend/src/main/resources/messages/messages_es_ES.properties
+++ b/backend/src/main/resources/messages/messages_es_ES.properties
@@ -250,3 +250,77 @@ business.invalid.state=Estado inválido para la operación
 business.constraint.violation=Violación de regla de negocio
 business.resource.conflict=Conflicto de recursos
 business.operation.not.allowed=Operación no permitida
+
+# ========================================
+# CÁLCULOS AVANZADOS DE COMISIONES - Sprint S2.2
+# ========================================
+
+# Cálculos Avanzados de Comisiones
+commission.detailed.success=Reporte detallado de comisiones generado con éxito - {0} contratos procesados
+commission.by.seller.success=Comisiones por vendedor calculadas con éxito - {0} vendedores procesados
+commission.breakdown.success=Desglose detallado generado con éxito - {0} contratos encontrados para el vendedor {1}
+commission.comparison.success=Comparación de períodos realizada con éxito
+
+# Proyecciones Avanzadas de Ingresos
+revenue.projection.success=Proyección de ingresos calculada con éxito para {0} meses: €{1}
+revenue.projection.error=Error al calcular proyección de ingresos
+
+# Contratos Venciendo - Historia 3
+expiring.contracts.success=Reporte de contratos venciendo generado con éxito - {0} contratos encontrados
+notifications.sent.success=Notificaciones de contratos venciendo enviadas con éxito
+notifications.sent.error=Error al enviar notificaciones de contratos venciendo
+
+# Validaciones Específicas de la Historia 2
+validation.days.range=El número de días debe estar entre 1 y 365
+validation.months.range=El número de meses debe estar entre 1 y 24
+validation.urgency.invalid=Nivel de urgencia inválido: {0}. Valores válidos: ALTA, MEDIA, BAJA
+validation.seller.required=El ID del vendedor es obligatorio
+
+# Mensajes de Contratos Venciendo
+contract.expiring.subject=Contrato venciendo en {0} días
+contract.expiring.body=Hola {0},\n\nSu contrato en la categoría ''{1}'' vence en {2} días.\n\nPor favor, póngase en contacto con nosotros para la renovación.\n\nAtentamente,\nEquipo de Subasta Electrónica
+
+# Formateo y Visualización
+commission.period.daily=Diario
+commission.period.weekly=Semanal
+commission.period.monthly=Mensual
+commission.period.quarterly=Trimestral
+commission.period.yearly=Anual
+
+commission.status.realized=Realizadas
+commission.status.projected=Proyectadas
+commission.status.pending=Pendientes
+
+urgency.high=Alta
+urgency.medium=Media
+urgency.low=Baja
+
+# Métricas y KPIs
+metrics.total.contracts=Total de Contratos
+metrics.active.sellers=Vendedores Activos
+metrics.projected.revenue=Ingresos Proyectados
+metrics.realized.revenue=Ingresos Realizados
+metrics.average.commission=Tasa Promedio de Comisión
+metrics.contracts.expiring=Contratos Venciendo
+metrics.contracts.created=Contratos Creados
+metrics.contracts.expired=Contratos Expirados
+metrics.active.categories=Categorías Activas
+
+# Reportes
+report.commission.title=Reporte de Comisiones
+report.commission.subtitle=Análisis detallado de comisiones por período
+report.expiring.title=Reporte de Contratos Venciendo
+report.expiring.subtitle=Contratos próximos al vencimiento
+report.projection.title=Proyección de Ingresos
+report.projection.subtitle=Estimaciones basadas en contratos activos
+
+# Exportación
+export.csv.success=Reporte exportado a CSV con éxito
+export.pdf.success=Reporte exportado a PDF con éxito
+export.error=Error al exportar reporte: {0}
+
+# Caché y Rendimiento
+cache.statistics.hit=Estadísticas obtenidas del caché
+cache.statistics.miss=Estadísticas calculadas y almacenadas en caché
+performance.warning=Rendimiento degradado: operación tomó {0}ms (límite: {1}ms)
+performance.optimal=Operación completada en {0}ms - rendimiento óptimo
