--- a/backend/src/main/resources/messages/messages_it_IT.properties
+++ b/backend/src/main/resources/messages/messages_it_IT.properties
@@ -250,3 +250,77 @@ business.invalid.state=Stato non valido per l'operazione
 business.constraint.violation=Violazione della regola di business
 business.resource.conflict=Conflitto di risorse
 business.operation.not.allowed=Operazione non consentita
+
+# ========================================
+# CALCOLI AVANZATI DELLE COMMISSIONI - Sprint S2.2
+# ========================================
+
+# Calcoli Avanzati delle Commissioni
+commission.detailed.success=Report dettagliato delle commissioni generato con successo - {0} contratti elaborati
+commission.by.seller.success=Commissioni per venditore calcolate con successo - {0} venditori elaborati
+commission.breakdown.success=Dettaglio generato con successo - {0} contratti trovati per il venditore {1}
+commission.comparison.success=Confronto dei periodi completato con successo
+
+# Proiezioni Avanzate dei Ricavi
+revenue.projection.success=Proiezione dei ricavi calcolata con successo per {0} mesi: €{1}
+revenue.projection.error=Errore nel calcolo della proiezione dei ricavi
+
+# Contratti in Scadenza - Storia 3
+expiring.contracts.success=Report dei contratti in scadenza generato con successo - {0} contratti trovati
+notifications.sent.success=Notifiche dei contratti in scadenza inviate con successo
+notifications.sent.error=Errore nell'invio delle notifiche dei contratti in scadenza
+
+# Validazioni Specifiche per la Storia 2
+validation.days.range=Il numero di giorni deve essere compreso tra 1 e 365
+validation.months.range=Il numero di mesi deve essere compreso tra 1 e 24
+validation.urgency.invalid=Livello di urgenza non valido: {0}. Valori validi: ALTA, MEDIA, BASSA
+validation.seller.required=L'ID del venditore è obbligatorio
+
+# Messaggi dei Contratti in Scadenza
+contract.expiring.subject=Contratto in scadenza tra {0} giorni
+contract.expiring.body=Ciao {0},\n\nIl tuo contratto nella categoria ''{1}'' scade tra {2} giorni.\n\nTi preghiamo di contattarci per il rinnovo.\n\nCordiali saluti,\nTeam Asta Elettronica
+
+# Formattazione e Visualizzazione
+commission.period.daily=Giornaliero
+commission.period.weekly=Settimanale
+commission.period.monthly=Mensile
+commission.period.quarterly=Trimestrale
+commission.period.yearly=Annuale
+
+commission.status.realized=Realizzate
+commission.status.projected=Proiettate
+commission.status.pending=In sospeso
+
+urgency.high=Alta
+urgency.medium=Media
+urgency.low=Bassa
+
+# Metriche e KPI
+metrics.total.contracts=Totale Contratti
+metrics.active.sellers=Venditori Attivi
+metrics.projected.revenue=Ricavi Proiettati
+metrics.realized.revenue=Ricavi Realizzati
+metrics.average.commission=Tasso Medio di Commissione
+metrics.contracts.expiring=Contratti in Scadenza
+metrics.contracts.created=Contratti Creati
+metrics.contracts.expired=Contratti Scaduti
+metrics.active.categories=Categorie Attive
+
+# Report
+report.commission.title=Report delle Commissioni
+report.commission.subtitle=Analisi dettagliata delle commissioni per periodo
+report.expiring.title=Report dei Contratti in Scadenza
+report.expiring.subtitle=Contratti prossimi alla scadenza
+report.projection.title=Proiezione dei Ricavi
+report.projection.subtitle=Stime basate sui contratti attivi
+
+# Esportazione
+export.csv.success=Report esportato in CSV con successo
+export.pdf.success=Report esportato in PDF con successo
+export.error=Errore nell'esportazione del report: {0}
+
+# Cache e Performance
+cache.statistics.hit=Statistiche ottenute dalla cache
+cache.statistics.miss=Statistiche calcolate e memorizzate nella cache
+performance.warning=Performance degradate: operazione ha richiesto {0}ms (limite: {1}ms)
+performance.optimal=Operazione completata in {0}ms - performance ottimali
