--- a/backend/src/main/resources/messages/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages/messages_pt_BR.properties
@@ -250,3 +250,77 @@ business.invalid.state=Estado inválido para a operação
 business.constraint.violation=Violação de regra de negócio
 business.resource.conflict=Conflito de recursos
 business.operation.not.allowed=Operação não permitida
+
+# ========================================
+# CÁLCULO DE COMISSÕES - Sprint S2.2
+# ========================================
+
+# Cálculos Avançados de Comissões
+commission.detailed.success=Relatório detalhado de comissões gerado com sucesso - {0} contratos processados
+commission.by.seller.success=Comissões por vendedor calculadas com sucesso - {0} vendedores processados
+commission.breakdown.success=Breakdown detalhado gerado com sucesso - {0} contratos encontrados para o vendedor {1}
+commission.comparison.success=Comparação de períodos realizada com sucesso
+
+# Projeções de Receita Avançadas
+revenue.projection.success=Projeção de receita calculada com sucesso para {0} meses: R$ {1}
+revenue.projection.error=Erro ao calcular projeção de receita
+
+# Contratos Vencendo - História 3
+expiring.contracts.success=Relatório de contratos vencendo gerado com sucesso - {0} contratos encontrados
+notifications.sent.success=Notificações de contratos vencendo enviadas com sucesso
+notifications.sent.error=Erro ao enviar notificações de contratos vencendo
+
+# Validações Específicas da História 2
+validation.days.range=Número de dias deve estar entre 1 e 365
+validation.months.range=Número de meses deve estar entre 1 e 24
+validation.urgency.invalid=Nível de urgência inválido: {0}. Valores válidos: ALTA, MEDIA, BAIXA
+validation.seller.required=ID do vendedor é obrigatório
+
+# Mensagens de Contratos Vencendo
+contract.expiring.subject=Contrato vencendo em {0} dias
+contract.expiring.body=Olá {0},\n\nSeu contrato na categoria ''{1}'' vence em {2} dias.\n\nPor favor, entre em contato conosco para renovação.\n\nAtenciosamente,\nEquipe Leilão Eletrônico
+
+# Formatação e Exibição
+commission.period.daily=Diário
+commission.period.weekly=Semanal  
+commission.period.monthly=Mensal
+commission.period.quarterly=Trimestral
+commission.period.yearly=Anual
+
+commission.status.realized=Realizadas
+commission.status.projected=Projetadas
+commission.status.pending=Pendentes
+
+urgency.high=Alta
+urgency.medium=Média
+urgency.low=Baixa
+
+# Métricas e KPIs
+metrics.total.contracts=Total de Contratos
+metrics.active.sellers=Vendedores Ativos
+metrics.projected.revenue=Receita Projetada
+metrics.realized.revenue=Receita Realizada
+metrics.average.commission=Taxa Média de Comissão
+metrics.contracts.expiring=Contratos Vencendo
+metrics.contracts.created=Contratos Criados
+metrics.contracts.expired=Contratos Expirados
+metrics.active.categories=Categorias Ativas
+
+# Relatórios
+report.commission.title=Relatório de Comissões
+report.commission.subtitle=Análise detalhada de comissões por período
+report.expiring.title=Relatório de Contratos Vencendo
+report.expiring.subtitle=Contratos próximos ao vencimento
+report.projection.title=Projeção de Receita
+report.projection.subtitle=Estimativas baseadas em contratos ativos
+
+# Exportação
+export.csv.success=Relatório exportado em CSV com sucesso
+export.pdf.success=Relatório exportado em PDF com sucesso
+export.error=Erro ao exportar relatório: {0}
+
+# Cache e Performance
+cache.statistics.hit=Estatísticas obtidas do cache
+cache.statistics.miss=Estatísticas calculadas e armazenadas no cache
+performance.warning=Performance degradada: operação levou {0}ms (limite: {1}ms)
+performance.optimal=Operação concluída em {0}ms - performance ótima
