S2.2H3 - Contratos Vencendo e Relatórios

--- a/backend/src/main/resources/messages/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages/messages_pt_BR.properties
@@ -265,20 +265,61 @@ commission.comparison.success=Comparação de períodos realizada com sucesso
 revenue.projection.success=Projeção de receita calculada com sucesso para {0} meses: R$ {1}
 revenue.projection.error=Erro ao calcular projeção de receita
 
-# Contratos Vencendo - História 3
+# ========================================
+# CONTRATOS VENCENDO - História 3: Sprint S2.2
+# ========================================
+
+# Relatórios de Contratos Vencendo
 expiring.contracts.success=Relatório de contratos vencendo gerado com sucesso - {0} contratos encontrados
+expiring.contracts.empty=Nenhum contrato vencendo encontrado para os critérios especificados
+expiring.contracts.error=Erro ao gerar relatório de contratos vencendo
+
+# Notificações Automáticas
 notifications.sent.success=Notificações de contratos vencendo enviadas com sucesso
 notifications.sent.error=Erro ao enviar notificações de contratos vencendo
+notifications.email.sent=Notificação enviada por email para {0}
+notifications.email.failed=Falha ao enviar email para {0}: {1}
+notifications.batch.completed=Lote de notificações processado: {0} enviadas, {1} falharam
 
-# Validações Específicas da História 2
+# Exportação de Relatórios
+export.csv.success=Relatório exportado em CSV com sucesso
+export.pdf.success=Relatório exportado em PDF com sucesso
+export.error=Erro ao exportar relatório: {0}
+export.csv.generating=Gerando relatório CSV...
+export.pdf.generating=Gerando relatório PDF...
+export.file.size=Arquivo gerado com {0} bytes
+
+# Validações Específicas da História 3
 validation.days.range=Número de dias deve estar entre 1 e 365
 validation.months.range=Número de meses deve estar entre 1 e 24
 validation.urgency.invalid=Nível de urgência inválido: {0}. Valores válidos: ALTA, MEDIA, BAIXA
 validation.seller.required=ID do vendedor é obrigatório
+validation.export.format.invalid=Formato de exportação inválido: {0}. Formatos válidos: CSV, PDF
 
-# Mensagens de Contratos Vencendo
-contract.expiring.subject=Contrato vencendo em {0} dias
+# Mensagens de Email para Contratos Vencendo
+contract.expiring.subject=⚠️ Contrato vencendo em {0} dias
 contract.expiring.body=Olá {0},\n\nSeu contrato na categoria ''{1}'' vence em {2} dias.\n\nPor favor, entre em contato conosco para renovação.\n\nAtenciosamente,\nEquipe Leilão Eletrônico
+contract.expiring.urgent.subject=🚨 URGENTE: Contrato vence em {0} dias
+contract.expiring.reminder.subject=📅 Lembrete: Contrato vencendo em {0} dias
+
+# Scheduler e Jobs Automáticos
+scheduler.contracts.expiring.start=Iniciando verificação automática de contratos vencendo
+scheduler.contracts.expiring.completed=Verificação de contratos vencendo concluída em {0}ms
+scheduler.contracts.expiring.error=Erro na verificação automática de contratos vencendo
+scheduler.notifications.sent=Scheduler enviou {0} notificações de contratos vencendo
+scheduler.cleanup.start=Iniciando limpeza automática de dados
+scheduler.cleanup.completed=Limpeza automática concluída
+
+# Urgência e Prioridades
+urgency.high=Alta
+urgency.medium=Média
+urgency.low=Baixa
+urgency.critical=Crítica
+
+priority.immediate=Imediata
+priority.high=Alta
+priority.normal=Normal
+priority.low=Baixa
 
 # Formatação e Exibição
 commission.period.daily=Diário
@@ -291,10 +332,6 @@ commission.status.realized=Realizadas
 commission.status.projected=Projetadas
 commission.status.pending=Pendentes
 
-urgency.high=Alta
-urgency.medium=Média
-urgency.low=Baixa
-
 # Métricas e KPIs
 metrics.total.contracts=Total de Contratos
 metrics.active.sellers=Vendedores Ativos
@@ -305,6 +342,8 @@ metrics.contracts.expiring=Contratos Vencendo
 metrics.contracts.created=Contratos Criados
 metrics.contracts.expired=Contratos Expirados
 metrics.active.categories=Categorias Ativas
+metrics.notifications.sent=Notificações Enviadas
+metrics.urgent.contracts=Contratos Urgentes
 
 # Relatórios
 report.commission.title=Relatório de Comissões
@@ -313,14 +352,14 @@ report.expiring.title=Relatório de Contratos Vencendo
 report.expiring.subtitle=Contratos próximos ao vencimento
 report.projection.title=Projeção de Receita
 report.projection.subtitle=Estimativas baseadas em contratos ativos
-
-# Exportação
-export.csv.success=Relatório exportado em CSV com sucesso
-export.pdf.success=Relatório exportado em PDF com sucesso
-export.error=Erro ao exportar relatório: {0}
+report.generated.at=Relatório gerado em {0}
+report.filters.applied=Filtros aplicados
+report.summary=Resumo Executivo
+report.details=Detalhes
 
 # Cache e Performance
 cache.statistics.hit=Estatísticas obtidas do cache
 cache.statistics.miss=Estatísticas calculadas e armazenadas no cache
 performance.warning=Performance degradada: operação levou {0}ms (limite: {1}ms)
 performance.optimal=Operação concluída em {0}ms - performance ótima
+performance.export.time=Exportação concluída em {0}ms
