--- a/backend/src/main/resources/messages/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages/messages_pt_BR.properties
@@ -1,5 +1,6 @@
 # Mensagens em Português (Brasil) - Idioma Padrão
 # Arquivo de mensagens para internacionalização
+# História 5: Integração e Otimização - Sprint S2.2
 
 # ========================================
 # MENSAGENS GERAIS
@@ -29,6 +30,61 @@ auth.access.denied=Acesso negado
 auth.user.not.found=Usuário não encontrado
 auth.password.invalid=Senha inválida
 auth.user.not.authenticated=Usuário não autenticado corretamente
+
+# ========================================
+# RATE LIMITING - História 5: Sprint S2.2
+# ========================================
+rate.limit.exceeded=Muitas requisições. Tente novamente em {0} segundos
+rate.limit.warning=Limite de requisições próximo do máximo
+rate.limit.blocked=IP bloqueado temporariamente por excesso de requisições
+rate.limit.user.exceeded=Limite de requisições por usuário excedido
+rate.limit.ip.exceeded=Limite de requisições por IP excedido
+rate.limit.report.exceeded=Limite de requisições para relatórios excedido
+rate.limit.admin.exceeded=Limite de requisições administrativas excedido
+rate.limit.enabled=Rate limiting habilitado
+rate.limit.disabled=Rate limiting desabilitado
+rate.limit.bucket.created=Bucket de rate limiting criado para {0}
+rate.limit.bucket.cleared=Cache de buckets de rate limiting limpo
+rate.limit.stats.requests=Requisições restantes: {0}
+rate.limit.stats.reset=Limite será resetado em: {0} segundos
+
+# ========================================
+# CACHE E PERFORMANCE - História 5: Sprint S2.2
+# ========================================
+cache.hit=Dados obtidos do cache
+cache.miss=Dados não encontrados no cache, calculando...
+cache.evicted=Cache limpo com sucesso
+cache.statistics.hit=Estatísticas obtidas do cache
+cache.statistics.miss=Estatísticas calculadas e armazenadas no cache
+cache.commission.hit=Relatório de comissões obtido do cache
+cache.commission.miss=Relatório de comissões calculado e armazenado no cache
+cache.categories.hit=Categorias obtidas do cache
+cache.categories.miss=Categorias carregadas e armazenadas no cache
+cache.sellers.hit=Vendedores ativos obtidos do cache
+cache.sellers.miss=Vendedores ativos carregados e armazenados no cache
+
+performance.warning=Performance degradada: operação levou {0}ms (limite: {1}ms)
+performance.optimal=Operação concluída em {0}ms - performance ótima
+performance.export.time=Exportação concluída em {0}ms
+performance.query.optimized=Query otimizada executada em {0}ms
+performance.index.used=Índice utilizado na consulta: {0}
+performance.compression.enabled=Compressão habilitada para resposta
+performance.compression.ratio=Taxa de compressão: {0}%
+
+# ========================================
+# INTEGRAÇÃO E OTIMIZAÇÃO - História 5: Sprint S2.2
+# ========================================
+integration.test.success=Teste de integração executado com sucesso
+integration.test.failed=Teste de integração falhou: {0}
+integration.cache.test=Teste de cache executado
+integration.rate.limit.test=Teste de rate limiting executado
+integration.compression.test=Teste de compressão executado
+integration.performance.test=Teste de performance executado em {0}ms
+
+optimization.index.created=Índice criado para otimização: {0}
+optimization.query.improved=Query otimizada com melhoria de {0}%
+optimization.cache.configured=Cache configurado com TTL de {0} minutos
+optimization.compression.configured=Compressão configurada para tipos MIME: {0}
 
 # ========================================
 # USUÁRIOS
@@ -233,6 +289,7 @@ error.403=Acesso negado
 error.404=Recurso não encontrado
 error.409=Conflito de dados
 error.422=Dados não processáveis
+error.429=Muitas requisições - tente novamente mais tarde
 error.500=Erro interno do servidor
 
 # ========================================
@@ -356,10 +413,3 @@ report.generated.at=Relatório gerado em {0}
 report.filters.applied=Filtros aplicados
 report.summary=Resumo Executivo
 report.details=Detalhes
-
-# Cache e Performance
-cache.statistics.hit=Estatísticas obtidas do cache
-cache.statistics.miss=Estatísticas calculadas e armazenadas no cache
-performance.warning=Performance degradada: operação levou {0}ms (limite: {1}ms)
-performance.optimal=Operação concluída em {0}ms - performance ótima
-performance.export.time=Exportação concluída em {0}ms
