Massa de dados renovada

--- a/backend/src/main/resources/messages/messages.properties
+++ b/backend/src/main/resources/messages/messages.properties
@@ -155,6 +155,7 @@ validation.max.value=Valor deve ser menor ou igual a {0}
 status.active=Ativo
 status.inactive=Inativo
 status.pending=Pendente
+status.pending_verification=Aguardando Verificação
 status.approved=Aprovado
 status.rejected=Rejeitado
 status.cancelled=Cancelado
