--- a/backend/src/main/resources/messages/messages_en_US.properties
+++ b/backend/src/main/resources/messages/messages_en_US.properties
@@ -187,6 +187,7 @@ validation.max.value=Value must be less than or equal to {0}
 status.active=Active
 status.inactive=Inactive
 status.pending=Pending
+status.pending_verification=Pending Verification
 status.approved=Approved
 status.rejected=Rejected
 status.cancelled=Cancelled
