--- a/backend/src/main/resources/messages/messages_es_ES.properties
+++ b/backend/src/main/resources/messages/messages_es_ES.properties
@@ -187,6 +187,7 @@ validation.max.value=El valor debe ser menor o igual a {0}
 status.active=Activo
 status.inactive=Inactivo
 status.pending=Pendiente
+status.pending_verification=Esperando Verificación
 status.approved=Aprobado
 status.rejected=Rechazado
 status.cancelled=Cancelado
