--- a/backend/src/main/resources/messages/messages_it_IT.properties
+++ b/backend/src/main/resources/messages/messages_it_IT.properties
@@ -187,6 +187,7 @@ validation.max.value=Il valore deve essere minore o uguale a {0}
 status.active=Attivo
 status.inactive=Inattivo
 status.pending=In attesa
+status.pending_verification=In attessa di verifica
 status.approved=Approvato
 status.rejected=Rifiutato
 status.cancelled=Annullato
